--- a/src/main/resources/templates/fragments/recipe.html
+++ b/src/main/resources/templates/fragments/recipe.html
@@ -19,7 +19,7 @@
             </h6>
         </div>
         <div class="card-body">
-            <p class="card-text" th:text="*{description}"></p>
+            <img th:src="@{*{imageURL}}" class="card-img-top" alt="Recipe image">
         </div>
     </div>
 </div>
