change logo KoalaKitchenCreations

--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -21,7 +21,7 @@
         justify-content-center" style="background-color: rgb(214,206,181);">
     <div class="container">
         <a class="navbar-brand" th:href="@{/homepage}" style="margin-left:210px;">
-            <img th:src="@{/images/koalaCreations.png}" alt="KoalaKitchenCreations" style="height:85px;" >
+            <img th:src="@{/images/logoKoalaKitchenCreations.png}" alt="KoalaKitchenCreations" style="height:85px;" >
         </a>
     </div>
 
