--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -17,11 +17,11 @@
 <body>
 
 <!--/*@thymesVar id="navItems" type="java.util.List<nl.miwnn.ch17.tactischetanuki.koala_kitchen_creations.model.NavItem>"*/-->
-<nav th:fragment="navbar(navItems, activeItem)" class="sticky-top navbar-expand-lg navbar navbar-light
+<nav th:fragment="navbar(navItems, activeItem)" class="navbar navbar-expand-lg navbar-light sticky-top
         justify-content-center" style="background-color: rgb(214,206,181);">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/homepage}" style="margin-left:210px;">
-            <img th:src="@{/images/logoKoalaKitchenCreations.png}" alt="KoalaKitchenCreations" style="height:85px;" >
+        <a class="navbar-brand" th:href="@{/}" style="margin-left:210px;">
+            <img th:src="@{/images/logoKoalaKitchenCreations.png}" alt="KoalaKitchenCreations" style="height:80px;" >
         </a>
     </div>
 
