--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -18,14 +18,14 @@
 
 <!--/*@thymesVar id="navItems" type="java.util.List<nl.miwnn.ch17.tactischetanuki.koala_kitchen_creations.model.NavItem>"*/-->
 <nav th:fragment="navbar(navItems, activeItem)" class="navbar navbar-expand-lg navbar-light sticky-top
-        justify-content-center" style="background-color: rgb(214,206,181);">
+        justify-content-center fs-3" style="background-color: rgb(214,206,181);">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/}" style="margin-left:210px;">
+        <a class="navbar-brand" th:href="@{/}" style="margin-left:251px;">
             <img th:src="@{/images/logoKoalaKitchenCreations.png}" alt="KoalaKitchenCreations" style="height:80px;" >
         </a>
     </div>
 
-    <ul class="navbar-nav mr-auto" style="margin-right: 250px;">
+    <ul class="navbar-nav mr-auto" style="margin-right: 253px;">
 
         <li class="nav-item" th:each="navItem : ${navItems}">
             <a class="nav-link" th:classappend="${activeItem == navItem.name} ? 'active'"
