--- a/src/main/resources/templates/categoryOverview.html
+++ b/src/main/resources/templates/categoryOverview.html
@@ -8,7 +8,7 @@
 <div class="page-wrapper">
     <nav th:replace="~{fragments/general :: navbar(${navItems}, 'Categories')}"></nav>
 
-    <main class="page-main container">
+    <main class="container py-4">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
                 <h1>Recipe categories</h1>
