--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -8,9 +8,9 @@
 <div class="page-wrapper">
     <nav th:replace="~{fragments/general :: navbar(${navItems}, '')}"></nav>
 
-    <main class="container">
+    <main class="container py-4">
         <div class="row">
-            <div class="col-md-1 col-lg-2 py-4">
+            <div class="col-md-1 col-lg-2">
                 <div class="sticky-top" style="top: 150px;">
                     <img th:src="${recipe.imageURL}" alt="Recipe image" class="img-fluid rounded">
                 </div>
