--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -10,7 +10,7 @@
 <div class="page-wrapper">
     <nav th:replace="~{fragments/general :: navbar(${navItems}, '')}"></nav>
 
-    <main class="page-main container">
+    <main class="container py-4">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
                 <form method="post" id="recipeForm" th:action="@{/recipe/save}" th:object="${formRecipe}"
